--- a/EverywhereHouseController/res/layout/boolean_item.xml
+++ b/EverywhereHouseController/res/layout/boolean_item.xml
@@ -15,6 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
+        android:background="@drawable/button_config"
+        android:textColor="@drawable/button_text_color"
         android:textOff="Off!"
         android:textOn="On!" >
 
