--- a/EverywhereHouseController/res/layout/integer_item.xml
+++ b/EverywhereHouseController/res/layout/integer_item.xml
@@ -12,9 +12,11 @@
     
 		<Button
 		    android:id="@+id/integer_value"
-		    android:layout_width="44dp"
+		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_gravity="center_horizontal"
+		    android:background="@drawable/button_config"
+		    android:textColor="@drawable/button_text_color"
 		    android:textOff="Off!"
 		    android:textOn="On!" >
 
