--- a/EverywhereHouseController/res/layout/create_event_dialog.xml
+++ b/EverywhereHouseController/res/layout/create_event_dialog.xml
@@ -16,14 +16,59 @@
         android:id="@+id/event_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:ems="10"
         android:hint="@string/event_name"
         android:singleLine="true" />
 
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Select a item"
+        android:textSize="20sp" />
+
+    <Spinner
+        android:id="@+id/sp_item"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Select an action"
+        android:textSize="20sp" />
+
+    <Spinner
+        android:id="@+id/sp_action"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Select a date"
+        android:textSize="20sp" />
+
+    <DatePicker
+        android:id="@+id/event_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        >
 
         <Button
             android:id="@+id/create_event"
@@ -44,6 +89,7 @@
             android:text="Cancel"
             android:textColor="@drawable/button_text_color"
             android:textSize="20sp" />
+
     </LinearLayout>
 
 </LinearLayout>
