--- a/EverywhereHouseController/res/layout/log_in_view.xml
+++ b/EverywhereHouseController/res/layout/log_in_view.xml
@@ -12,16 +12,6 @@
     android:screenSize="normal"
     tools:context=".LogIn" >
 
-    <TextView
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/passwordText"
-        android:layout_toLeftOf="@+id/passwordText"
-        android:text="Password "
-        android:textColor="@color/Black"
-        android:textSize="20sp" />
-
     <ImageView
         android:id="@+id/HouseIconManagementMenu"
         android:layout_width="200dp"
@@ -40,47 +30,6 @@
         android:src="@drawable/word_ehc" />
 
     <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/password"
-        android:layout_centerVertical="true"
-        android:text="User"
-        android:textColor="@color/Black"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/idText"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignBottom="@+id/id"
-        android:layout_alignLeft="@+id/passwordText"
-        android:layout_alignRight="@+id/passwordText"
-        android:background="@color/LightGrey"
-        android:ems="10"
-        android:lines="1"
-        android:singleLine="true"
-        android:textColor="@color/Black" />
-
-    <EditText
-        android:id="@+id/passwordText"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignLeft="@+id/buttonLogin"
-        android:layout_alignRight="@+id/HouseIconManagementMenu"
-        android:layout_below="@+id/idText"
-        android:layout_marginTop="44dp"
-        android:background="@color/LightGrey"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:lines="1"
-        android:password="true"
-        android:singleLine="true"
-        android:textColor="@color/Black" >
-
-    </EditText>
-
-    <TextView
         android:id="@+id/createUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -91,17 +40,62 @@
         android:textColor="@color/Blue"
         android:textColorHint="@color/Blue" />
 
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@color/GreenApp" >
+
+        <EditText
+            android:id="@+id/idText"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignLeft="@+id/passwordText"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/passwordText"
+            android:layout_marginTop="32dp"
+            android:background="@color/White"
+            android:ems="10"
+            android:hint="User"
+            android:lines="1"
+            android:singleLine="true"
+            android:textColor="@color/Black" >
+
+            <requestFocus />
+        </EditText>
+
+        <EditText
+            android:id="@+id/passwordText"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="28dp"
+            android:background="@color/White"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:lines="1"
+            android:password="true"
+            android:singleLine="true"
+            android:textColor="@color/Black" />
+
+    </RelativeLayout>
+
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/createUser"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="39dp"
-        android:background="@drawable/button_config"
+        android:layout_alignLeft="@+id/createUser"
+        android:layout_below="@+id/relativeLayout1"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/button_config2"
         android:onClick="onClickButton"
         android:text="Login"
-        android:textColor="@drawable/button_text_color"
+        android:textColor="@drawable/button_text_color3"
         android:textSize="25sp" />
 
 </RelativeLayout>
