--- a/EverywhereHouseController/res/layout/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout/main_menu_view.xml
@@ -5,16 +5,15 @@
 	 android:layout_width="match_parent"
 	 android:layout_height="match_parent" >
 	 
-	<RelativeLayout 
+	<RelativeLayout
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:background="@android:color/white"
+	    android:background="@color/White"
 	    android:gravity="top|bottom|left|right|center"
 	    android:paddingBottom="@dimen/activity_vertical_margin"
 	    android:paddingLeft="@dimen/activity_horizontal_margin"
 	    android:paddingRight="@dimen/activity_horizontal_margin"
-	    android:paddingTop="@dimen/activity_vertical_margin"
-	    >
+	    android:paddingTop="@dimen/activity_vertical_margin" >
 
 	    <LinearLayout
 	        android:id="@+id/linearLayout1"
@@ -57,9 +56,9 @@
 	                android:layout_alignLeft="@+id/buttonEvents"
 	                android:layout_alignParentRight="true"
 	                android:layout_alignTop="@+id/buttonConfig"
-	                android:background="@drawable/button_config"
+	                android:background="@drawable/button_config2"
 	                android:text="Profile"
-	                android:textColor="@drawable/button_text_color"
+	                android:textColor="@drawable/button_text_color3"
 	                android:textSize="20sp" />
 	
 	            <Button
@@ -71,9 +70,9 @@
 	                android:layout_alignParentRight="true"
 	                android:layout_marginLeft="28dp"
 	                android:layout_toRightOf="@+id/buttonManagement"
-	                android:background="@drawable/button_config"
+	                android:background="@drawable/button_config2"
 	                android:text="Tasks"
-	                android:textColor="@drawable/button_text_color"
+	                android:textColor="@drawable/button_text_color3"
 	                android:textSize="20sp" />
 	
 	            <Button
@@ -83,9 +82,9 @@
 	                android:layout_alignParentLeft="true"
 	                android:layout_alignParentTop="true"
 	                android:layout_marginTop="72dp"
-	                android:background="@drawable/button_config"
+	                android:background="@drawable/button_config2"
 	                android:text="Management"
-	                android:textColor="@drawable/button_text_color"
+	                android:textColor="@drawable/button_text_color3"
 	                android:textSize="20sp" />
 	
 	            <Button
@@ -95,9 +94,9 @@
 	                android:layout_alignParentLeft="true"
 	                android:layout_below="@+id/buttonManagement"
 	                android:layout_marginTop="18dp"
-	                android:background="@drawable/button_config"
+	                android:background="@drawable/button_config2"
 	                android:text="Configuration"
-	                android:textColor="@drawable/button_text_color"
+	                android:textColor="@drawable/button_text_color3"
 	                android:textSize="20sp" />
 	
 	        </RelativeLayout>
@@ -111,6 +110,6 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:layout_gravity="left"
-	    android:background="@color/White" />
+	    android:background="@color/GreenApp" />
  
 </android.support.v4.widget.DrawerLayout>
