--- a/EverywhereHouseController/res/layout/pager_view.xml
+++ b/EverywhereHouseController/res/layout/pager_view.xml
@@ -40,6 +40,6 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:layout_gravity="left"
-	    android:background="@color/White" />
+	    android:background="@color/GreenApp" />
  
 </android.support.v4.widget.DrawerLayout>
