--- a/EverywhereHouseController/res/values/color.xml
+++ b/EverywhereHouseController/res/values/color.xml
@@ -5,6 +5,7 @@
  <color name="White">#FFFFFF</color>
  <color name="Ivory">#FFFFF0</color>
  <color name="LightYellow">#FFFFE0</color>
+ <color name="GreenApp">#00C6C6</color>
  <color name="Yellow">#FFFF00</color>
  <color name="Snow">#FFFAFA</color>
  <color name="FloralWhite">#FFFAF0</color>
