--- a/EverywhereHouseController/res/layout/items_view.xml
+++ b/EverywhereHouseController/res/layout/items_view.xml
@@ -20,7 +20,13 @@
             android:text="TextView"
             android:textColor="@color/White"
             android:textSize="30sp" />
-
+		<ImageView
+		    android:id="@+id/imageView1"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="15dp"
+		    android:layout_marginTop="15dp"
+		    android:src="@drawable/ic_drawer" />
     </RelativeLayout>
     
      <ExpandableListView
