--- a/EverywhereHouseController/res/layout/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout/main_menu_view.xml
@@ -6,8 +6,8 @@
 	 android:layout_height="match_parent" >
 	 
 	<RelativeLayout
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
 	    android:background="@color/White"
 	    android:gravity="top|bottom|left|right|center"
 	    android:paddingBottom="@dimen/activity_vertical_margin"
@@ -42,6 +42,14 @@
 	                android:layout_centerHorizontal="true"
 	                android:layout_marginTop="30dp"
 	                android:src="@drawable/word_ehc" />
+
+	            <ImageView
+	                android:id="@+id/imageView1"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_alignParentLeft="true"
+	                android:layout_alignParentTop="true"
+	                android:src="@drawable/ic_drawer" />
 	
 	        </RelativeLayout>
 	
