--- a/EverywhereHouseController/res/layout/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout/management_menu_view.xml
@@ -27,6 +27,16 @@
                 android:textSize="30sp"
                  />
 
+             <ImageView
+                 android:id="@+id/imageView1"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_alignParentLeft="true"
+                 android:layout_alignParentTop="true"
+                 android:layout_marginLeft="15dp"
+                 android:layout_marginTop="15dp"
+                 android:src="@drawable/ic_drawer" />
+
         </RelativeLayout>
 
         <ListView
