--- a/EverywhereHouseController/res/layout/profile_view.xml
+++ b/EverywhereHouseController/res/layout/profile_view.xml
@@ -118,6 +118,16 @@
 	        android:text="E-mail"
 	        android:textColor="@color/White"
 	        android:textSize="20sp" />
+	   	
+	    <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/ic_drawer" />
 
 	</RelativeLayout>
 
