--- a/EverywhereHouseController/res/layout/controller_item.xml
+++ b/EverywhereHouseController/res/layout/controller_item.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Remote Control" />
+        android:text="Remote Control"
+        android:textColor="@color/White" />
     
 		<Button
 		    android:id="@+id/launch_value"
