--- a/EverywhereHouseController/res/layout/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout/main_menu_view.xml
@@ -14,7 +14,7 @@
 	    android:paddingLeft="@dimen/activity_horizontal_margin"
 	    android:paddingRight="@dimen/activity_horizontal_margin"
 	    android:paddingTop="@dimen/activity_vertical_margin" >
-
+		    
 	    <LinearLayout
 	        android:id="@+id/linearLayout1"
 	        android:layout_width="fill_parent"
@@ -42,14 +42,6 @@
 	                android:layout_centerHorizontal="true"
 	                android:layout_marginTop="30dp"
 	                android:src="@drawable/word_ehc" />
-
-	            <ImageView
-	                android:id="@+id/imageView1"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_alignParentTop="true"
-	                android:src="@drawable/ic_drawer" />
 	
 	        </RelativeLayout>
 	
@@ -110,6 +102,15 @@
 	        </RelativeLayout>
 	
 	    </LinearLayout>
+
+	    <ImageButton
+	        android:id="@+id/lateralMenu"
+	        android:layout_width="50dp"
+	        android:layout_height="50dp"
+	        android:layout_alignParentLeft="true"
+	        android:layout_alignParentTop="true"
+	        android:background="@color/White"
+	        android:src="@drawable/ic_drawer" />
 
 	</RelativeLayout>
 
