--- a/EverywhereHouseController/res/layout/profile_view.xml
+++ b/EverywhereHouseController/res/layout/profile_view.xml
@@ -120,7 +120,7 @@
 	        android:textSize="20sp" />
 	   	
 	    <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/lateralMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
