--- a/EverywhereHouseController/res/layout/create_event_dialog.xml
+++ b/EverywhereHouseController/res/layout/create_event_dialog.xml
@@ -4,14 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/title_create_event"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="New event"
-        android:textSize="20sp" />
-
     <EditText
         android:id="@+id/event_name"
         android:layout_width="wrap_content"
@@ -21,75 +13,83 @@
         android:hint="@string/event_name"
         android:singleLine="true" />
 
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Select a item"
-        android:textSize="20sp" />
-
     <Spinner
         android:id="@+id/sp_item"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Select an action"
-        android:textSize="20sp" />
+        android:layout_gravity="center_horizontal" />
 
     <Spinner
         android:id="@+id/sp_action"
-        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Select a date"
+        android:text="No date selected"
         android:textSize="20sp" />
 
-    <DatePicker
-        android:id="@+id/event_date"
+    <Button
+        android:id="@+id/bt_select_date"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_config"
+        android:text="Select date"
+        android:textColor="@drawable/button_text_color"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20sp" 
+        />
+
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="No time selected"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/bt_select_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_config"
+        android:text="Select time"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal" 
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal" >
 
         <Button
             android:id="@+id/create_event"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="69dp"
             android:background="@drawable/button_config"
+            android:layout_gravity="center_horizontal"
             android:text="Confirm"
             android:textColor="@drawable/button_text_color"
             android:textSize="20sp" />
 
         <Button
             android:id="@+id/cancel_event"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="69dp"
+            android:layout_gravity="center_horizontal"
             android:background="@drawable/button_config"
             android:text="Cancel"
             android:textColor="@drawable/button_text_color"
             android:textSize="20sp" />
-
     </LinearLayout>
 
 </LinearLayout>
