--- a/EverywhereHouseController/res/layout-large/profile_view.xml
+++ b/EverywhereHouseController/res/layout-large/profile_view.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/on_off_remote"
+        android:id="@+id/UserImage"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_alignParentTop="true"
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/on_off_remote"
+        android:layout_below="@+id/UserImage"
         android:layout_marginLeft="54dp"
         android:layout_marginTop="61dp"
         android:text="User"
@@ -92,7 +92,7 @@
         android:layout_height="70dp"
         android:layout_alignBaseline="@+id/profileSave"
         android:layout_alignBottom="@+id/profileSave"
-        android:layout_toRightOf="@+id/on_off_remote"
+        android:layout_toRightOf="@+id/UserImage"
         android:background="@drawable/button_config"
         android:onClick="onClickButton"
         android:text="Exit"
