--- a/EverywhereHouseController/res/layout/event_fragment.xml
+++ b/EverywhereHouseController/res/layout/event_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/forgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name " />
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/forgotPassword"
         android:text="Item " />
 
     <TextView
