--- a/EverywhereHouseController/res/layout/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout/main_menu_view.xml
@@ -22,11 +22,11 @@
 	        android:layout_alignParentLeft="true"
 	        android:layout_alignParentTop="true"
 	        android:orientation="vertical" >
-	
+
 	        <RelativeLayout
 	            android:layout_width="match_parent"
 	            android:layout_height="199dp" >
-	
+
 	            <ImageView
 	                android:id="@+id/world_loading_view"
 	                android:layout_width="200dp"
@@ -34,7 +34,7 @@
 	                android:layout_centerHorizontal="true"
 	                android:layout_marginTop="25dp"
 	                android:src="@drawable/world_ehc" />
-	
+
 	            <ImageView
 	                android:id="@+id/word_ehc"
 	                android:layout_width="200dp"
@@ -42,13 +42,59 @@
 	                android:layout_centerHorizontal="true"
 	                android:layout_marginTop="30dp"
 	                android:src="@drawable/word_ehc" />
-	
+
+	            <TextView
+	                android:id="@+id/temperature"
+	                android:layout_width="70dp"
+	                android:layout_height="70dp"
+	                android:layout_below="@+id/word_ehc"
+	                android:layout_centerHorizontal="true"
+	                android:text="ºC"
+	                android:textColor="@color/GreenApp"
+	                android:textSize="30sp" />
+
+	            <ImageView
+	                android:id="@+id/WeatherImage3"
+	                android:layout_width="70dp"
+	                android:layout_height="70dp"
+	                android:layout_alignParentBottom="true"
+	                android:layout_toLeftOf="@+id/temperature" />
+
+	            <ImageView
+	                android:id="@+id/WeatherImage2"
+	                android:layout_width="90dp"
+	                android:layout_height="90dp"
+	                android:layout_alignParentRight="true"
+	                android:layout_alignTop="@+id/WeatherImage1" />
+
+	            <ImageView
+	                android:id="@+id/WeatherImage4"
+	                android:layout_width="90dp"
+	                android:layout_height="90dp"
+	                android:layout_alignTop="@+id/WeatherImage5"
+	                android:layout_toRightOf="@+id/temperature" />
+
+	            <ImageView
+	                android:id="@+id/WeatherImage1"
+	                android:layout_width="90dp"
+	                android:layout_height="90dp"
+	                android:layout_above="@+id/WeatherImage3"
+	                android:layout_alignParentLeft="true" />
+
+	            <ImageView
+	                android:id="@+id/WeatherImage5"
+	                android:layout_width="90dp"
+	                android:layout_height="90dp"
+	                android:layout_alignParentBottom="true"
+	                android:layout_marginBottom="17dp"
+	                android:layout_toLeftOf="@+id/temperature" />
+
 	        </RelativeLayout>
-	
+
 	        <RelativeLayout
 	            android:layout_width="match_parent"
 	            android:layout_height="match_parent" >
-	
+
 	            <Button
 	                android:id="@+id/buttonProfile"
 	                android:layout_width="wrap_content"
@@ -60,7 +106,7 @@
 	                android:text="Profile"
 	                android:textColor="@drawable/button_text_color3"
 	                android:textSize="20sp" />
-	
+
 	            <Button
 	                android:id="@+id/buttonEvents"
 	                android:layout_width="wrap_content"
@@ -74,7 +120,7 @@
 	                android:text="Tasks"
 	                android:textColor="@drawable/button_text_color3"
 	                android:textSize="20sp" />
-	
+
 	            <Button
 	                android:id="@+id/buttonManagement"
 	                android:layout_width="wrap_content"
@@ -86,7 +132,7 @@
 	                android:text="Management"
 	                android:textColor="@drawable/button_text_color3"
 	                android:textSize="20sp" />
-	
+
 	            <Button
 	                android:id="@+id/buttonConfig"
 	                android:layout_width="wrap_content"
@@ -98,9 +144,7 @@
 	                android:text="Configuration"
 	                android:textColor="@drawable/button_text_color3"
 	                android:textSize="20sp" />
-	
 	        </RelativeLayout>
-	
 	    </LinearLayout>
 
 	    <ImageButton
