--- a/EverywhereHouseController/res/layout-large/create_user.xml
+++ b/EverywhereHouseController/res/layout-large/create_user.xml
@@ -1,115 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:fillViewport="true" >
 
-    <EditText
-        android:id="@+id/newEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_alignLeft="@+id/newUser"
-        android:ems="10"
-        android:singleLine="true" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/GreenApp" >
 
-    <EditText
-        android:id="@+id/newUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textMessage"
-        android:layout_marginLeft="36dp"
-        android:layout_toRightOf="@+id/textMessage"
-        android:ems="10"
-        android:singleLine="true" >
+        <RelativeLayout
+            android:id="@+id/RelativeLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_weight="3.69"
+            android:background="@color/Black"
+            android:orientation="vertical" >
 
-        <requestFocus />
-    </EditText>
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="New user"
+                android:textColor="@color/White"
+                android:textSize="30sp" />
+        </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="131dp"
-        android:layout_marginTop="138dp"
-        android:text="User"
-        android:textSize="25sp" />
+        <RelativeLayout
+            android:id="@+id/RelativeLayout01"
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_weight="3.69"
+            android:background="@color/Black"
+            android:orientation="vertical" >
+        </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textMessage"
-        android:layout_marginTop="67dp"
-        android:layout_toLeftOf="@+id/newUser"
-        android:text="E-mail"
-        android:textSize="25sp" />
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@color/White"
+            android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/newUserCancel"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:layout_alignRight="@+id/newRepeatPassword"
-        android:layout_alignTop="@+id/newUserConfirm"
-        android:layout_marginRight="50dp"
-        android:background="@drawable/button_config"
-        android:text="Exit"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="25sp" />
+            <EditText
+                android:id="@+id/newUser"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:ems="10"
+                android:hint="User"
+                android:singleLine="true"
+                android:textColor="@color/Black"
+                android:textColorHint="@color/DarkGray"
+                android:textSize="40sp" >
 
-    <EditText
-        android:id="@+id/newPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_alignLeft="@+id/newEmail"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:password="true"
-        android:singleLine="true" />
+                <requestFocus />
+            </EditText>
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="53dp"
-        android:layout_toLeftOf="@+id/newUser"
-        android:text="Password"
-        android:textSize="25sp" />
+            <EditText
+                android:id="@+id/newEmail"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:ems="10"
+                android:hint="Email"
+                android:singleLine="true"
+                android:textColor="@color/Black"
+                android:textColorHint="@color/DarkGray"
+                android:textSize="40sp" />
 
-    <EditText
-        android:id="@+id/newRepeatPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView4"
-        android:layout_alignLeft="@+id/newPassword"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:password="true"
-        android:singleLine="true" />
+            <EditText
+                android:id="@+id/newPassword"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:password="true"
+                android:singleLine="true"
+                android:textColor="@color/Black"
+                android:textColorHint="@color/DarkGray"
+                android:textSize="40sp" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_marginTop="25dp"
-        android:layout_toLeftOf="@+id/newUser"
-        android:text="Repeat \nPassword"
-        android:textSize="25sp" />
+            <EditText
+                android:id="@+id/newRepeatPassword"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:ems="10"
+                android:hint="Repeat password"
+                android:inputType="textPassword"
+                android:password="true"
+                android:singleLine="true"
+                android:textColor="@color/Black"
+                android:textColorHint="@color/DarkGray"
+                android:textSize="40sp" />
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/newUserConfirm"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:layout_alignLeft="@+id/textMessage"
-        android:layout_below="@+id/newRepeatPassword"
-        android:layout_marginTop="96dp"
-        android:background="@drawable/button_config"
-        android:text="Confirm"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="25sp" />
+        <Button
+            android:id="@+id/newUserCancel"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_alignBaseline="@+id/newUserConfirm"
+            android:layout_alignBottom="@+id/newUserConfirm"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="52dp"
+            android:background="@drawable/button_config"
+            android:text="Exit"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="40sp" />
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/newUserConfirm"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_above="@+id/RelativeLayout01"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="35dp"
+            android:layout_marginLeft="51dp"
+            android:background="@drawable/button_config"
+            android:text="Confirm"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="40sp" />
+
+    </RelativeLayout>
+
+</ScrollView>
