--- a/EverywhereHouseController/res/layout-large/log_in_view.xml
+++ b/EverywhereHouseController/res/layout-large/log_in_view.xml
@@ -1,47 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:screenSize = "large"
-    android:screenDensity = "hdpi"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/White"
     android:gravity="top"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@android:color/white"
+    android:screenSize="normal"
     tools:context=".LogIn" >
 
-     <ImageView
-         android:id="@+id/HouseIconManagementMenu"
-         android:layout_width="200dp"
-         android:layout_height="180dp"
-         android:layout_alignParentTop="true"
-         android:layout_centerHorizontal="true"
-         android:layout_marginTop="40dp"
-         android:src="@drawable/world_ehc" />
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@color/GreenApp" >
 
-     <ImageView
-         android:id="@+id/imageWordEHC"
-         android:layout_width="200dp"
-         android:layout_height="180dp"
-         android:layout_alignBottom="@+id/HouseIconManagementMenu"
-         android:layout_alignTop="@+id/HouseIconManagementMenu"
-         android:layout_centerHorizontal="true"
-         android:layout_marginTop="5dp"
-         android:src="@drawable/word_ehc" />
+        <EditText
+            android:id="@+id/idText"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="83dp"
+            android:background="@color/White"
+            android:ems="10"
+            android:hint="User"
+            android:lines="1"
+            android:singleLine="true"
+            android:textColor="@color/Black"
+            android:textSize="30sp" />
 
-     <TextView
-         android:id="@+id/id"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_above="@+id/passwordText"
-         android:layout_alignLeft="@+id/password"
-         android:layout_marginBottom="66dp"
-         android:text="User"
-         android:textColor="@color/Black"
-         android:textSize="30sp" />
+        <EditText
+            android:id="@+id/passwordText"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignLeft="@+id/idText"
+            android:layout_below="@+id/idText"
+            android:layout_marginTop="55dp"
+            android:background="@color/White"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:lines="1"
+            android:password="true"
+            android:singleLine="true"
+            android:textColor="@color/Black"
+            android:textSize="30sp" />
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/createUser"
@@ -49,60 +61,51 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="57dp"
-        android:clickable="true"
-        android:onClick="createUser"
+        android:layout_marginBottom="14dp"
         android:text="Create user"
         android:textColor="@color/Blue"
-        android:textColorHint="@color/Blue" />
+        android:textColorHint="@color/Blue"
+        android:textSize="20sp" />
+
+    <ImageView
+        android:id="@+id/HouseIconManagementMenu"
+        android:layout_width="300dp"
+        android:layout_height="180dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp"
+        android:src="@drawable/world_ehc" />
+
+    <ImageView
+        android:id="@+id/imageWordEHC"
+        android:layout_width="210dp"
+        android:layout_height="180dp"
+        android:layout_alignTop="@+id/HouseIconManagementMenu"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/word_ehc" />
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:layout_above="@+id/createUser"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_below="@+id/relativeLayout1"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="47dp"
-        android:background="@drawable/button_config"
+        android:layout_marginTop="54dp"
+        android:background="@drawable/button_config2"
         android:onClick="onClickButton"
         android:text="Login"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="30sp" />
-
-    <EditText
-        android:id="@+id/idText"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignBaseline="@+id/id"
-        android:layout_alignBottom="@+id/id"
-        android:layout_alignLeft="@+id/passwordText"
-        android:background="@color/LightGrey"
-        android:ems="10"
-        android:lines="1"
-        android:singleLine="true" />
-
-    <EditText
-        android:id="@+id/passwordText"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignLeft="@+id/createUser"
-        android:layout_alignTop="@+id/password"
-        android:background="@color/LightGrey"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:lines="1"
-        android:password="true"
-        android:singleLine="true" />
+        android:textColor="@drawable/button_text_color3"
+        android:textSize="40sp" />
 
     <TextView
-        android:id="@+id/password"
+        android:id="@+id/forgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonLogin"
-        android:layout_marginBottom="54dp"
-        android:layout_toLeftOf="@+id/buttonLogin"
-        android:text="Password "
-        android:textColor="@color/Black"
-        android:textSize="30sp" />
+        android:layout_below="@+id/buttonLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="42dp"
+        android:text="Forgot password?"
+        android:textColor="@color/Blue"
+        android:textSize="20sp" />
 
 </RelativeLayout>
