--- a/EverywhereHouseController/res/layout-large/profile_view.xml
+++ b/EverywhereHouseController/res/layout-large/profile_view.xml
@@ -1,115 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout2"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/White"
-    android:orientation="vertical" >
+<android.support.v4.widget.DrawerLayout
+	 xmlns:android="http://schemas.android.com/apk/res/android"
+	 android:id="@+id/drawer_layout"
+	 android:layout_width="match_parent"
+	 android:layout_height="match_parent" >
+	 
+	<RelativeLayout
+	    android:id="@+id/RelativeLayout2"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical"
+	    android:background="@color/GreenApp" >
 
-    <ImageView
-        android:id="@+id/UserImage"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="43dp"
-        android:src="@drawable/user_icon" />
+	    <ImageView
+	        android:id="@+id/UserImage"
+	        android:layout_width="300dp"
+	        android:layout_height="300dp"
+	        android:layout_alignParentTop="true"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginTop="43dp"
+	        android:src="@drawable/user_icon" />
 
-    <EditText
-        android:id="@+id/profileUser"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
-        android:layout_alignLeft="@+id/profileEmail"
-        android:layout_alignRight="@+id/profileExit"
-        android:ems="10"
-        android:singleLine="true"
-        android:textColor="@color/DarkGray"
-        android:textSize="25sp" />
+		    <EditText
+		        android:id="@+id/profileEmail"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBaseline="@+id/textView2"
+		        android:layout_alignBottom="@+id/textView2"
+		        android:layout_alignLeft="@+id/profileUser"
+		        android:layout_alignRight="@+id/profileUser"
+		        android:ems="10"
+		        android:singleLine="true"
+		        android:textColor="@color/Black"
+		        android:textSize="30sp" >
 
-    <EditText
-        android:id="@+id/profilePassword"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/profileSave"
-        android:layout_alignRight="@+id/profileExit"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:password="true"
-        android:singleLine="true"
-        android:textColor="@color/DarkGray"
-        android:textSize="25sp" />
+		        <requestFocus />
+		    </EditText>
 
-    <EditText
-        android:id="@+id/profileEmail"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_alignLeft="@+id/profilePassword"
-        android:layout_alignRight="@+id/profileExit"
-        android:ems="10"
-        android:singleLine="true"
-        android:textColor="@color/DarkGray"
-        android:textSize="25sp" />
+		    <EditText
+		        android:id="@+id/profilePassword"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBottom="@+id/textView3"
+		        android:layout_alignLeft="@+id/profileEmail"
+		        android:layout_alignRight="@+id/profileEmail"
+		        android:ems="10"
+		        android:inputType="textPassword"
+		        android:singleLine="true"
+		        android:textColor="@color/Black"
+		        android:textSize="30sp" />
 
-    <TextView
-        android:id="@+id/textMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/UserImage"
-        android:layout_marginLeft="54dp"
-        android:layout_marginTop="61dp"
-        android:text="User"
-        android:textColor="@color/Black"
-        android:textSize="30sp" />
+		    <Button
+		        android:id="@+id/profileExit"
+		        android:layout_width="160dp"
+		        android:layout_height="60dp"
+		        android:layout_alignRight="@+id/imageOverflow"
+		        android:layout_alignTop="@+id/profileSave"
+		        android:layout_marginRight="60dp"
+		        android:background="@drawable/button_config"
+		        android:onClick="onClickButton"
+		        android:text="Exit"
+		        android:textColor="@drawable/button_text_color2"
+		        android:textSize="40sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textMessage"
-        android:layout_below="@+id/textMessage"
-        android:layout_marginTop="52dp"
-        android:text="E-mail"
-        android:textColor="@color/Black"
-        android:textSize="30sp" />
+		    <Button
+		        android:id="@+id/profileSave"
+		        android:layout_width="160dp"
+		        android:layout_height="60dp"
+		        android:layout_alignParentBottom="true"
+		        android:layout_marginBottom="58dp"
+		        android:layout_toRightOf="@+id/lateralMenu"
+		        android:background="@drawable/button_config"
+		        android:onClick="onClickButton"
+		        android:text="Save"
+		        android:textColor="@drawable/button_text_color2"
+		        android:textSize="40sp" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="55dp"
-        android:text="Password"
-        android:textColor="@color/Black"
-        android:textSize="30sp" />
+		    <EditText
+		        android:id="@+id/profileUser"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBaseline="@+id/textMessage"
+		        android:layout_alignBottom="@+id/textMessage"
+		        android:layout_alignRight="@+id/profileExit"
+		        android:layout_toRightOf="@+id/profileSave"
+		        android:ems="10"
+		        android:singleLine="true"
+		        android:textColor="@color/Black"
+		        android:textSize="30sp" />
 
-    <Button
-        android:id="@+id/profileExit"
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_alignBaseline="@+id/profileSave"
-        android:layout_alignBottom="@+id/profileSave"
-        android:layout_toRightOf="@+id/UserImage"
-        android:background="@drawable/button_config"
-        android:onClick="onClickButton"
-        android:text="Exit"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="25sp" />
+		    <TextView
+		        android:id="@+id/textView2"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/textMessage"
+		        android:layout_below="@+id/profileUser"
+		        android:layout_marginTop="99dp"
+		        android:text="E-mail"
+		        android:textColor="@color/White"
+		        android:textSize="40sp" />
 
-    <Button
-        android:id="@+id/profileSave"
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_below="@+id/textView3"
-        android:layout_marginTop="118dp"
-        android:background="@drawable/button_config"
-        android:onClick="onClickButton"
-        android:text="Save"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="25sp" />
+		    <TextView
+		        android:id="@+id/textView3"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_above="@+id/profileSave"
+		        android:layout_alignLeft="@+id/textView2"
+		        android:layout_marginBottom="73dp"
+		        android:text="Password"
+		        android:textColor="@color/White"
+		        android:textSize="40sp" />
 
-</RelativeLayout>
+		    <TextView
+		        android:id="@+id/textMessage"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_below="@+id/UserImage"
+		        android:layout_marginTop="42dp"
+		        android:layout_toLeftOf="@+id/UserImage"
+		        android:text="User"
+		        android:textColor="@color/White"
+		        android:textSize="40sp" />
+
+		    <ImageButton
+		        android:id="@+id/imageOverflow"
+		        android:layout_width="100dp"
+		        android:layout_height="100dp"
+		        android:layout_alignParentRight="true"
+		        android:layout_alignParentTop="true"
+		        android:background="@color/GreenApp"
+		        android:src="@drawable/ic_action_overflow" />
+
+		    <ImageButton
+		        android:id="@+id/lateralMenu"
+		        android:layout_width="100dp"
+		        android:layout_height="100dp"
+		        android:layout_alignParentLeft="true"
+		        android:layout_alignParentTop="true"
+		        android:background="@color/GreenApp"
+		        android:src="@drawable/ic_drawer" />
+
+		    <CheckBox
+		        android:id="@+id/checkBoxProfileImage"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignRight="@+id/UserImage"
+		        android:layout_alignTop="@+id/UserImage" />
+
+	</RelativeLayout>
+
+	<ListView
+	    android:id="@+id/ListViewSlidingMenu"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_gravity="left"
+	    android:background="@color/GreenApp" />
+ 
+</android.support.v4.widget.DrawerLayout>
