--- a/EverywhereHouseController/res/layout-small/create_user.xml
+++ b/EverywhereHouseController/res/layout-small/create_user.xml
@@ -6,122 +6,127 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:background="@color/GreenApp" >
 
-    <EditText
-        android:id="@+id/newPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_alignRight="@+id/newUserCancel"
-        android:layout_toRightOf="@+id/newUserConfirm"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:password="true"
-        android:singleLine="true" />
+        <Button
+            android:id="@+id/newUserConfirm"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="60dp"
+            android:layout_marginLeft="42dp"
+            android:background="@drawable/button_config"
+            android:text="Confirm"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/newUserCancel"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_alignBaseline="@+id/newUserConfirm"
-        android:layout_alignBottom="@+id/newUserConfirm"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="34dp"
-        android:background="@drawable/button_config"
-        android:text="Exit"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="20sp" />
+        <RelativeLayout
+            android:id="@+id/RelativeLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_above="@+id/linearLayout1"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="15dp"
+            android:layout_weight="3.69"
+            android:background="@color/Black"
+            android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/newRepeatPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView4"
-        android:layout_alignLeft="@+id/newPassword"
-        android:layout_alignRight="@+id/newPassword"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:password="true"
-        android:singleLine="true" >
-    </EditText>
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="New user"
+                android:textColor="@color/White"
+                android:textSize="30sp" />
 
-    <EditText
-        android:id="@+id/newUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textMessage"
-        android:layout_alignLeft="@+id/newEmail"
-        android:layout_alignRight="@+id/newEmail"
-        android:ems="10"
-        android:singleLine="true" >
+        </RelativeLayout>
 
-        <requestFocus />
+        <Button
+            android:id="@+id/newUserCancel"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/newUserConfirm"
+            android:layout_marginRight="36dp"
+            android:background="@drawable/button_config"
+            android:text="Exit"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="20sp" />
 
-    </EditText>
+        <RelativeLayout
+            android:id="@+id/RelativeLayout01"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_weight="3.69"
+            android:background="@color/Black"
+            android:orientation="vertical" >
+        </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/newEmail"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_marginBottom="34dp"
-        android:text="User"
-        android:textSize="20sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@color/White"
+            android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/newPassword"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_marginBottom="28dp"
-        android:text="E-mail"
-        android:textSize="20sp" />
+            <EditText
+                android:id="@+id/newUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="User"
+                android:singleLine="true"
+                android:textColor="@color/Black"
+                android:textColorHint="@color/DarkGray"
+                android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/newUserConfirm"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="45dp"
-        android:background="@drawable/button_config"
-        android:text="Confirm"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="20sp" />
+            <EditText
+                android:id="@+id/newEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Email"
+                android:singleLine="true"
+                android:textColor="@color/Black"
+                android:textColorHint="@color/DarkGray"
+                android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/newUserConfirm"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_marginBottom="36dp"
-        android:text="Repeat \nPassword"
-        android:textSize="20sp" />
+            <EditText
+                android:id="@+id/newPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:password="true"
+                android:singleLine="true"
+                android:textColor="@color/Black"
+                android:textColorHint="@color/DarkGray"
+                android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="30dp"
-        android:text="Password"
-        android:textSize="20sp" />
+            <EditText
+                android:id="@+id/newRepeatPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Repeat password"
+                android:inputType="textPassword"
+                android:password="true"
+                android:singleLine="true"
+                android:textColor="@color/Black"
+                android:textColorHint="@color/DarkGray"
+                android:textSize="20sp" />
+        </LinearLayout>
 
-    <EditText
-        android:id="@+id/newEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/newPassword"
-        android:layout_alignRight="@+id/newPassword"
-        android:ems="10"
-        android:singleLine="true" >
-    </EditText>
+    </RelativeLayout>
 
-</RelativeLayout>
 </ScrollView>
