--- a/EverywhereHouseController/res/layout-small/log_in_view.xml
+++ b/EverywhereHouseController/res/layout-small/log_in_view.xml
@@ -4,100 +4,102 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/White"
+    android:gravity="top"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:screenSize="normal"
     tools:context=".LogIn" >
-	
+
     <ImageView
         android:id="@+id/HouseIconManagementMenu"
-        android:layout_width="100dp"
-        android:layout_height="90dp"
-        android:layout_alignParentTop="false"
+        android:layout_width="180dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
         android:src="@drawable/world_ehc" />
 
-     <ImageView
-         android:id="@+id/imageWordEHC"
-         android:layout_width="100dp"
-         android:layout_height="90dp"
-         android:layout_alignBottom="@+id/HouseIconManagementMenu"
-         android:layout_alignTop="@+id/HouseIconManagementMenu"
-         android:layout_centerHorizontal="true"
-         android:layout_marginTop="5dp"
-         android:src="@drawable/word_ehc" />
-    
+    <ImageView
+        android:id="@+id/imageWordEHC"
+        android:layout_width="180dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/word_ehc" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/HouseIconManagementMenu"
+        android:background="@color/GreenApp" >
+
+        <EditText
+            android:id="@+id/idText"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignLeft="@+id/passwordText"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/passwordText"
+            android:layout_marginTop="32dp"
+            android:background="@color/White"
+            android:ems="10"
+            android:hint="User"
+            android:lines="1"
+            android:singleLine="true"
+            android:textColor="@color/Black" />
+
+        <EditText
+            android:id="@+id/passwordText"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="28dp"
+            android:background="@color/White"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:lines="1"
+            android:password="true"
+            android:singleLine="true"
+            android:textColor="@color/Black" />
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/createUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp"
+        android:layout_alignRight="@+id/relativeLayout1"
+        android:layout_marginBottom="30dp"
         android:text="Create user"
         android:textColor="@color/Blue"
         android:textColorHint="@color/Blue" />
 
-    <EditText
-        android:id="@+id/idText"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/passwordText"
-        android:layout_centerVertical="true"
-        android:background="@color/LightGrey"
-        android:ems="10"
-        android:lines="1"
-        android:singleLine="true"
-        android:textColor="@color/Black" >
-
-        <requestFocus />
-    </EditText>
-
-    <EditText
-        android:id="@+id/passwordText"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/createUser"
-        android:layout_below="@+id/id"
-        android:layout_marginLeft="33dp"
-        android:layout_marginTop="33dp"
-        android:background="@color/LightGrey"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:lines="1"
-        android:password="true"
-        android:singleLine="true"
-        android:textColor="@color/Black" />
-
     <TextView
-        android:id="@+id/password"
+        android:id="@+id/forgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/passwordText"
-        android:layout_toLeftOf="@+id/passwordText"
-        android:text="Password "
-        android:textColor="@color/Black"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/password"
-        android:layout_alignTop="@+id/idText"
-        android:text="User"
-        android:textColor="@color/Black"
-        android:textSize="20sp" />
+        android:layout_alignBaseline="@+id/createUser"
+        android:layout_alignBottom="@+id/createUser"
+        android:layout_alignLeft="@+id/relativeLayout1"
+        android:text="Forgot password?"
+        android:textColor="@color/Blue" />
 
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/createUser"
-        android:layout_alignLeft="@+id/createUser"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/button_config"
+        android:layout_below="@+id/relativeLayout1"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/button_config2"
         android:onClick="onClickButton"
         android:text="Login"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="20sp" />
+        android:textColor="@drawable/button_text_color3"
+        android:textSize="25sp" />
 
 </RelativeLayout>
