--- a/EverywhereHouseController/res/layout-small/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout-small/main_menu_view.xml
@@ -1,98 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:gravity="top|bottom|left|right|center"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainMenu" >
+<android.support.v4.widget.DrawerLayout
+	 xmlns:android="http://schemas.android.com/apk/res/android"
+	 android:id="@+id/drawer_layout"
+	 android:layout_width="match_parent"
+	 android:layout_height="match_parent" >
+	 
+	<RelativeLayout
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:background="@color/White"
+	    android:gravity="top|bottom|left|right|center"
+	    android:paddingBottom="@dimen/activity_vertical_margin"
+	    android:paddingLeft="@dimen/activity_horizontal_margin"
+	    android:paddingRight="@dimen/activity_horizontal_margin"
+	    android:paddingTop="@dimen/activity_vertical_margin" >
+		    
+	    <LinearLayout
+	        android:id="@+id/linearLayout1"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:layout_alignParentLeft="true"
+	        android:layout_alignParentTop="true"
+	        android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
+	        <RelativeLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="199dp" >
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp" >
+	            <ImageView
+	                android:id="@+id/world_loading_view"
+	                android:layout_width="200dp"
+	                android:layout_height="120dp"
+	                android:layout_centerHorizontal="true"
+	                android:layout_marginTop="25dp"
+	                android:src="@drawable/world_ehc" />
 
-            <ImageView
-                android:id="@+id/world_loading_view"
-                android:layout_width="100dp"
-                android:layout_height="90dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/world_ehc" />
+	            <ImageView
+	                android:id="@+id/word_ehc"
+	                android:layout_width="200dp"
+	                android:layout_height="120dp"
+	                android:layout_centerHorizontal="true"
+	                android:layout_marginTop="30dp"
+	                android:src="@drawable/word_ehc" />
 
-            <ImageView
-                android:id="@+id/word_ehc"
-                android:layout_width="100dp"
-                android:layout_height="90dp"
-                android:layout_alignLeft="@+id/world_loading_view"
-                android:layout_alignTop="@+id/world_loading_view"
-                android:src="@drawable/word_ehc" />
+	            <TextView
+	                android:id="@+id/temperature"
+	                android:layout_width="70dp"
+	                android:layout_height="70dp"
+	                android:layout_below="@+id/word_ehc"
+	                android:layout_centerHorizontal="true"
+	                android:text="ºC"
+	                android:textColor="@color/GreenApp"
+	                android:textSize="30sp" />
 
-        </RelativeLayout>
+	            <ImageView
+	                android:id="@+id/WeatherImage3"
+	                android:layout_width="70dp"
+	                android:layout_height="70dp"
+	                android:layout_alignParentBottom="true"
+	                android:layout_toLeftOf="@+id/temperature" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="188dp" >
+	            <ImageView
+	                android:id="@+id/WeatherImage2"
+	                android:layout_width="90dp"
+	                android:layout_height="90dp"
+	                android:layout_alignParentRight="true"
+	                android:layout_alignTop="@+id/WeatherImage1" />
 
-            <Button
-                android:id="@+id/buttonWorks"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/buttonManagement"
-                android:layout_alignBottom="@+id/buttonManagement"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/button_config"
-                android:text="Tasks"
-                android:textColor="@drawable/button_text_color"
-                android:textSize="20sp" />
+	            <ImageView
+	                android:id="@+id/WeatherImage4"
+	                android:layout_width="90dp"
+	                android:layout_height="90dp"
+	                android:layout_alignTop="@+id/WeatherImage5"
+	                android:layout_toRightOf="@+id/temperature" />
 
-            <Button
-                android:id="@+id/buttonProfile"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/button_config"
-                android:text="Profile"
-                android:textColor="@drawable/button_text_color"
-                android:textSize="20sp" />
+	            <ImageView
+	                android:id="@+id/WeatherImage1"
+	                android:layout_width="90dp"
+	                android:layout_height="90dp"
+	                android:layout_above="@+id/WeatherImage3"
+	                android:layout_alignParentLeft="true" />
 
-            <Button
-                android:id="@+id/buttonManagement"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/button_config"
-                android:text="Management"
-                android:textColor="@drawable/button_text_color"
-                android:textSize="20sp" />
+	            <ImageView
+	                android:id="@+id/WeatherImage5"
+	                android:layout_width="90dp"
+	                android:layout_height="90dp"
+	                android:layout_alignParentBottom="true"
+	                android:layout_marginBottom="17dp"
+	                android:layout_toLeftOf="@+id/temperature" />
 
-            <Button
-                android:id="@+id/buttonConfig"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:background="@drawable/button_config"
-                android:text="Configuration"
-                android:textColor="@drawable/button_text_color"
-                android:textSize="20sp" />
+	        </RelativeLayout>
 
-        </RelativeLayout>
+	        <RelativeLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="match_parent" >
 
-    </LinearLayout>
+	            <Button
+	                android:id="@+id/buttonProfile"
+	                android:layout_width="wrap_content"
+	                android:layout_height="70dp"
+	                android:layout_alignLeft="@+id/buttonEvents"
+	                android:layout_alignParentRight="true"
+	                android:layout_alignTop="@+id/buttonConfig"
+	                android:background="@drawable/button_config2"
+	                android:text="Profile"
+	                android:textColor="@drawable/button_text_color3"
+	                android:textSize="20sp" />
 
-</RelativeLayout>
+	            <Button
+	                android:id="@+id/buttonEvents"
+	                android:layout_width="120dp"
+	                android:layout_height="70dp"
+	                android:layout_alignBaseline="@+id/buttonManagement"
+	                android:layout_alignBottom="@+id/buttonManagement"
+	                android:layout_alignParentRight="true"
+	                android:background="@drawable/button_config2"
+	                android:text="Tasks"
+	                android:textColor="@drawable/button_text_color3"
+	                android:textSize="20sp" />
+
+	            <Button
+	                android:id="@+id/buttonConfig"
+	                android:layout_width="wrap_content"
+	                android:layout_height="70dp"
+	                android:layout_alignParentLeft="true"
+	                android:layout_below="@+id/buttonManagement"
+	                android:layout_marginTop="18dp"
+	                android:background="@drawable/button_config2"
+	                android:text="Configuration"
+	                android:textColor="@drawable/button_text_color3"
+	                android:textSize="20sp" />
+
+	            <Button
+	                android:id="@+id/buttonManagement"
+	                android:layout_width="wrap_content"
+	                android:layout_height="70dp"
+	                android:layout_alignParentLeft="true"
+	                android:layout_alignParentTop="true"
+	                android:background="@drawable/button_config2"
+	                android:text="Management"
+	                android:textColor="@drawable/button_text_color3"
+	                android:textSize="20sp" />
+
+	        </RelativeLayout>
+	    </LinearLayout>
+
+	    <ImageButton
+	        android:id="@+id/lateralMenu"
+	        android:layout_width="50dp"
+	        android:layout_height="50dp"
+	        android:layout_alignParentLeft="true"
+	        android:layout_alignParentTop="true"
+	        android:background="@color/White"
+	        android:src="@drawable/ic_drawer" />
+
+	</RelativeLayout>
+
+	<ListView
+	    android:id="@+id/ListViewSlidingMenu"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_gravity="left"
+	    android:background="@color/GreenApp" />
+ 
+</android.support.v4.widget.DrawerLayout>
