--- a/EverywhereHouseController/res/layout-small/pager_view.xml
+++ b/EverywhereHouseController/res/layout-small/pager_view.xml
@@ -1,39 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mainPlacesMenu"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<android.support.v4.widget.DrawerLayout
+	 xmlns:android="http://schemas.android.com/apk/res/android"
+	 android:id="@+id/drawer_layout"
+	 android:layout_width="match_parent"
+	 android:layout_height="match_parent" >
+	 
+	<LinearLayout
+	    android:id="@+id/mainPlacesMenu"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:background="@color/GreenApp"
+	    android:orientation="vertical" >
+	    
+	   <ImageButton
+		    android:id="@+id/lateralMenu"
+		    android:layout_width="50dp"
+		    android:layout_height="50dp"
+		    android:layout_marginLeft="15dp"
+		    android:layout_marginTop="15dp"
+		    android:background="@color/GreenApp"
+		    android:src="@drawable/ic_drawer" />
+	    		
+	    <android.support.v4.view.ViewPager
+	        android:id="@+id/pager"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" >
+	
+	    </android.support.v4.view.ViewPager>
 
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/White"
-        android:fillViewport="true" >
+	</LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/HorizontalListView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/White"
-            android:orientation="horizontal" >
-			
-             <Button
-                 android:id="@+id/buttonLogin"
-                 android:layout_width="40dp"
-                 android:layout_height="30dp"
-                 android:onClick="onClickButton"
-                 android:textSize="20sp" />
-             
-        </LinearLayout>
-    </HorizontalScrollView>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-    </android.support.v4.view.ViewPager>
-
-</LinearLayout>
+	<ListView
+	    android:id="@+id/ListViewSlidingMenu"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_gravity="left"
+	    android:background="@color/GreenApp" />
+ 
+</android.support.v4.widget.DrawerLayout>
