--- a/EverywhereHouseController/res/layout-small/profile_view.xml
+++ b/EverywhereHouseController/res/layout-small/profile_view.xml
@@ -1,114 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout2"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/White" >
+<android.support.v4.widget.DrawerLayout
+	 xmlns:android="http://schemas.android.com/apk/res/android"
+	 android:id="@+id/drawer_layout"
+	 android:layout_width="match_parent"
+	 android:layout_height="match_parent" >
+	 
+	<RelativeLayout
+	    android:id="@+id/RelativeLayout2"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical"
+	    android:background="@color/GreenApp" >
+	
+	    <Button
+	        android:id="@+id/profileExit"
+	        android:layout_width="100dp"
+	        android:layout_height="40dp"
+	        android:layout_alignBaseline="@+id/profileSave"
+	        android:layout_alignBottom="@+id/profileSave"
+	        android:layout_alignParentRight="true"
+	        android:layout_marginRight="34dp"
+	        android:background="@drawable/button_config"
+	        android:onClick="onClickButton"
+	        android:text="Exit"
+	        android:textColor="@drawable/button_text_color2"
+	        android:textSize="20sp" />
+	    
+	<ImageButton
+            android:id="@+id/imageOverflow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/GreenApp"
+            android:src="@drawable/ic_action_overflow" />
+	<ImageButton
+            android:id="@+id/lateralMenu"
+	        android:layout_width="50dp"
+	        android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/ic_drawer"
+            android:background="@color/GreenApp" />
 
-    <EditText
-        android:id="@+id/profileEmail"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/profilePassword"
-        android:ems="10"
-        android:singleLine="true"
-        android:textColor="@color/DarkGray"
-        android:textSize="20sp" >
+		    <ImageView
+		        android:id="@+id/UserImage"
+		        android:layout_width="120dp"
+		        android:layout_height="120dp"
+		        android:layout_alignTop="@+id/lateralMenu"
+		        android:layout_centerHorizontal="true"
+		        android:src="@drawable/user_icon" />
 
-        <requestFocus />
-    </EditText>
+		    <Button
+		        android:id="@+id/profileSave"
+		        android:layout_width="100dp"
+		        android:layout_height="40dp"
+		        android:layout_alignParentBottom="true"
+		        android:layout_marginBottom="28dp"
+		        android:layout_toRightOf="@+id/lateralMenu"
+		        android:background="@drawable/button_config"
+		        android:onClick="onClickButton"
+		        android:text="Save"
+		        android:textColor="@drawable/button_text_color2"
+		        android:textSize="20sp" />
 
-    <EditText
-        android:id="@+id/profileUser"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textMessage"
-        android:layout_alignLeft="@+id/profileEmail"
-        android:ems="10"
-        android:singleLine="true"
-        android:textColor="@color/DarkGray"
-        android:textSize="20sp" />
+		    <CheckBox
+		        android:id="@+id/checkBoxProfileImage"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBottom="@+id/lateralMenu"
+		        android:layout_toRightOf="@+id/UserImage" />
 
-    <EditText
-        android:id="@+id/profilePassword"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_alignRight="@+id/profileExit"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:singleLine="true"
-        android:textColor="@color/DarkGray"
-        android:textSize="20sp" />
+		    <EditText
+		        android:id="@+id/profileUser"
+		        android:layout_width="160dp"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/textMessage"
+		        android:layout_alignParentRight="true"
+		        android:layout_below="@+id/textMessage"
+		        android:ems="10"
+		        android:singleLine="true"
+		        android:textColor="@color/DarkGray"
+		        android:textSize="20sp" >
 
-    <Button
-        android:id="@+id/profileExit"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_alignBaseline="@+id/profileSave"
-        android:layout_alignBottom="@+id/profileSave"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="34dp"
-        android:background="@drawable/button_config"
-        android:onClick="onClickButton"
-        android:text="Exit"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="20sp" />
+		        <requestFocus />
+		    </EditText>
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="58dp"
-        android:layout_toLeftOf="@+id/UserImage"
-        android:text="Password"
-        android:textColor="@color/Black"
-        android:textSize="20sp" />
+		    <EditText
+		        android:id="@+id/profileEmail"
+		        android:layout_width="160dp"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/profileUser"
+		        android:layout_alignParentRight="true"
+		        android:layout_below="@+id/textView2"
+		        android:ems="10"
+		        android:singleLine="true"
+		        android:textColor="@color/DarkGray"
+		        android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/profileSave"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView3"
-        android:layout_marginLeft="34dp"
-        android:layout_marginTop="46dp"
-        android:background="@drawable/button_config"
-        android:onClick="onClickButton"
-        android:text="Save"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="20sp" />
+		    <TextView
+		        android:id="@+id/textView3"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/profilePassword"
+		        android:layout_below="@+id/profileEmail"
+		        android:text="Password"
+		        android:textColor="@color/White"
+		        android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/textMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/profileEmail"
-        android:layout_alignLeft="@+id/profileSave"
-        android:layout_marginBottom="35dp"
-        android:text="User"
-        android:textColor="@color/Black"
-        android:textSize="20sp" />
+		    <EditText
+		        android:id="@+id/profilePassword"
+		        android:layout_width="160dp"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/profileEmail"
+		        android:layout_alignParentRight="true"
+		        android:layout_below="@+id/textView3"
+		        android:ems="10"
+		        android:inputType="textPassword"
+		        android:singleLine="true"
+		        android:textColor="@color/DarkGray"
+		        android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_centerVertical="true"
-        android:text="E-mail"
-        android:textColor="@color/Black"
-        android:textSize="20sp" />
+		    <TextView
+		        android:id="@+id/textMessage"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/lateralMenu"
+		        android:layout_below="@+id/UserImage"
+		        android:text="User"
+		        android:textColor="@color/White"
+		        android:textSize="20sp" />
 
-    <ImageView
-        android:id="@+id/UserImage"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_above="@+id/profileUser"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/user_icon" />
+		    <TextView
+		        android:id="@+id/textView2"
+		        android:layout_width="60dp"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/profileEmail"
+		        android:layout_centerVertical="true"
+		        android:text="E-mail"
+		        android:textColor="@color/White"
+		        android:textSize="20sp" />
 
-</RelativeLayout>
+		    <LinearLayout
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_below="@+id/UserImage"
+		        android:layout_toLeftOf="@+id/profileSave"
+		        android:orientation="vertical" />
+
+	</RelativeLayout>
+
+	<ListView
+	    android:id="@+id/ListViewSlidingMenu"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_gravity="left"
+	    android:background="@color/GreenApp" />
+ 
+</android.support.v4.widget.DrawerLayout>
