--- a/EverywhereHouseController/res/layout-xlarge/log_in_view.xml
+++ b/EverywhereHouseController/res/layout-xlarge/log_in_view.xml
@@ -1,105 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:screenSize = "xlarge"
-    android:screenDensity = "hdpi"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/White"
     android:gravity="top"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@android:color/white"
+    android:screenSize="normal"
     tools:context=".LogIn" >
 
-     <ImageView
-         android:id="@+id/HouseIconManagementMenu"
-         android:layout_width="match_parent"
-         android:layout_height="200dp"
-         android:layout_alignParentTop="true"
-         android:layout_centerHorizontal="true"
-         android:layout_marginTop="48dp"
-         android:src="@drawable/world_ehc" />
+    <ImageView
+        android:id="@+id/HouseIconManagementMenu"
+        android:layout_width="200dp"
+        android:layout_height="120dp"
+        android:layout_alignLeft="@+id/imageWordEHC"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/world_ehc" />
 
-     <ImageView
-         android:id="@+id/imageWordEHC"
-         android:layout_width="400dp"
-         android:layout_height="500dp"
-         android:layout_alignBottom="@+id/HouseIconManagementMenu"
-         android:layout_alignTop="@+id/HouseIconManagementMenu"
-         android:layout_centerHorizontal="true"
-         android:src="@drawable/word_ehc" />
+    <ImageView
+        android:id="@+id/imageWordEHC"
+        android:layout_width="200dp"
+        android:layout_height="120dp"
+        android:layout_alignTop="@+id/HouseIconManagementMenu"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/word_ehc" />
 
-     <TextView
-         android:id="@+id/id"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_alignBottom="@+id/idText"
-         android:layout_alignLeft="@+id/HouseIconManagementMenu"
-         android:layout_marginLeft="40dp"
-         android:text="User"
-         android:textColor="@color/Black"
-         android:textSize="50sp" />
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@color/GreenApp" >
 
-     <TextView
-         android:id="@+id/password"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_alignLeft="@+id/id"
-         android:layout_below="@+id/id"
-         android:layout_marginTop="125dp"
-         android:text="Password "
-         android:textColor="@color/Black"
-         android:textSize="50sp" />
+        <EditText
+            android:id="@+id/idText"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignLeft="@+id/passwordText"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/passwordText"
+            android:layout_marginTop="32dp"
+            android:background="@color/White"
+            android:ems="10"
+            android:hint="User"
+            android:lines="1"
+            android:singleLine="true"
+            android:textColor="@color/Black" >
 
-     <EditText
-         android:id="@+id/idText"
-         android:layout_width="400dp"
-         android:layout_height="70dp"
-         android:layout_alignRight="@+id/HouseIconManagementMenu"
-         android:layout_below="@+id/HouseIconManagementMenu"
-         android:layout_marginRight="40dp"
-         android:layout_marginTop="146dp"
-         android:ems="10"
-         android:lines="1" >
+            <requestFocus />
+        </EditText>
 
-         <requestFocus />
-     </EditText>
+        <EditText
+            android:id="@+id/passwordText"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="28dp"
+            android:background="@color/White"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:lines="1"
+            android:password="true"
+            android:singleLine="true"
+            android:textColor="@color/Black" />
 
-     <EditText
-         android:id="@+id/passwordText"
-         android:layout_width="400dp"
-         android:layout_height="70dp"
-         android:layout_alignBottom="@+id/password"
-         android:layout_alignLeft="@+id/idText"
-         android:ems="10"
-         android:inputType="textPassword"
-         android:lines="1" />
+    </RelativeLayout>
 
-     <Button
-         android:id="@+id/buttonLogin"
-         android:layout_width="300dp"
-         android:layout_height="100dp"
-         android:layout_below="@+id/passwordText"
-         android:layout_centerHorizontal="true"
-         android:layout_marginTop="173dp"
-         android:background="@drawable/button_config"
-         android:onClick="onClickButton"
-         android:text="Login"
-         android:textColor="@drawable/button_text_color"
-         android:textSize="50sp" />
+    <Button
+        android:id="@+id/buttonLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/createUser"
+        android:layout_below="@+id/relativeLayout1"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/button_config2"
+        android:onClick="onClickButton"
+        android:text="Login"
+        android:textColor="@drawable/button_text_color3"
+        android:textSize="25sp" />
 
-     <TextView
-         android:id="@+id/createUser"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_below="@+id/buttonLogin"
-         android:layout_centerHorizontal="true"
-         android:layout_marginTop="120dp"
-         android:text="Create user"
-         android:textColor="@color/Blue"
-         android:textColorHint="@color/Blue"
-         android:textSize="40sp" />
+    <TextView
+        android:id="@+id/forgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Forgot password?"
+        android:textColor="@color/Blue" />
+
+    <TextView
+        android:id="@+id/createUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="14dp"
+        android:text="Create user"
+        android:textColor="@color/Blue"
+        android:textColorHint="@color/Blue" />
 
 </RelativeLayout>
