--- a/EverywhereHouseController/res/layout-xlarge/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout-xlarge/management_menu_view.xml
@@ -1,97 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_marginBottom="0dp"
-    android:layout_marginLeft="0dp"
-    android:layout_marginRight="0dp"
-    android:layout_marginTop="0dp"
-    android:background="@android:color/white"
-    android:gravity="top|bottom|left|right|center"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".ManagementMenu" >
-    	    	
-        <LinearLayout
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/White"
+        android:orientation="vertical" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="164dp" >
+
+            <TextView
+                android:id="@+id/forgotPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:textColor="@color/GreenApp"
+                android:text="ROOMS"
+                android:textSize="30sp"
+                 />
+
+              <ImageButton
+	        android:id="@+id/lateralMenu"
+	        android:layout_width="50dp"
+	        android:layout_height="50dp"
+	        android:layout_alignParentLeft="true"
+	        android:layout_alignParentTop="true"
+	        android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+	        android:background="@color/White"
+	        android:src="@drawable/ic_drawer" />
+
+        </RelativeLayout>
+
+        <ListView
+            android:id="@+id/roomsListView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:orientation="vertical" >
+            android:background="@color/GreenApp">
+        </ListView>
+    </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+    <ListView
+        android:id="@+id/ListViewSlidingMenu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:background="@color/GreenApp" />
 
-                <ImageView
-                    android:id="@+id/HouseIconManagementMenu"
-                    android:layout_width="match_parent"
-                    android:layout_height="160dp"
-                    android:layout_marginBottom="50dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/world_ehc" />
-
-                <ImageView
-                    android:id="@+id/imageWordManagementMenu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="170dp"
-                    android:layout_alignLeft="@+id/HouseIconManagementMenu"
-                    android:layout_alignParentRight="true"
-                    android:layout_weight="0.12"
-                    android:src="@drawable/word_ehc" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/RelativeContentTables"
-                android:layout_width="match_parent"
-                android:layout_height="552dp" >
-
-                <TableLayout
-                    android:id="@+id/table2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="60dp"
-                    android:layout_marginTop="30dp" >
-
-                </TableLayout>
-
-                <TableLayout
-                    android:id="@+id/table1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="60dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_weight="0.12" >
-
-                    <TableRow
-                        android:id="@+id/tableRow1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
-
-                        <Button
-                            android:id="@+id/genericButton"
-                            android:layout_width="160dp"
-                            android:layout_height="100dp"
-                            android:layout_marginBottom="10dp"
-                            android:height="100dp"
-                            android:text="Habitación"
-                            android:textSize="20sp"
-                            android:width="160dp" />
-
-                    </TableRow>
-                </TableLayout>
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
-</ScrollView>
+</android.support.v4.widget.DrawerLayout>
