--- a/EverywhereHouseController/res/layout/forgot_password_dialog.xml
+++ b/EverywhereHouseController/res/layout/forgot_password_dialog.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="User" >
+        android:hint="User"
+        android:lines="1"
+        android:singleLine="true" >
 
         <requestFocus />
     </EditText>
@@ -21,7 +23,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Email"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:lines="1"
+        android:singleLine="true" />
 
     <RelativeLayout
         android:id="@+id/RelativeLayout1"
