--- a/EverywhereHouseController/res/layout/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout/main_menu_view.xml
@@ -109,13 +109,11 @@
 
 	            <Button
 	                android:id="@+id/buttonEvents"
-	                android:layout_width="wrap_content"
+	                android:layout_width="120dp"
 	                android:layout_height="70dp"
 	                android:layout_alignBaseline="@+id/buttonManagement"
 	                android:layout_alignBottom="@+id/buttonManagement"
 	                android:layout_alignParentRight="true"
-	                android:layout_marginLeft="28dp"
-	                android:layout_toRightOf="@+id/buttonManagement"
 	                android:background="@drawable/button_config2"
 	                android:text="Tasks"
 	                android:textColor="@drawable/button_text_color3"
